src/parser/test/parser-tests-gen/data/good/good-42.raml
#%RAML 1.0
title: Seed
version: v1
types:
  Seed1:
    properties:
      str1: string
      num1: number
  Seed2:
    properties:
      str2: string
      num2: number
  Seed3:
    properties:
      str3: string
      num3: number
  Seed41:
    type: Seed1
    properties:
      str4: string
      num4: number
  Type1:
    type: object|Seed2
    example: {}
  Type2:
    type: [Seed2]
    example: |
      {
        "str2": "str",
        "num2": 1,
        "type2_prop_1": {},
        "type2_bool_1": true
      }
    properties:
      type2_bool_1:
        type: boolean
      type2_prop_1:
        type: object
  Type3:
    type: Seed41|Seed3
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1
      }
  Type4:
    type: [Seed3]
    example: |
      {
        "str3": "str",
        "num3": 1,
        "type4_prop_1": {},
        "type4_num_1": 1
      }
    properties:
      type4_num_1:
        type: number
      type4_prop_1:
        type: object
  Type5:
    type: [Type1,Seed41]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1
      }
  Type6:
    type: object|Seed3
    example: {}
  Type7:
    type: Seed41
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type7_prop_1": {},
        "type7_str_1": "str"
      }
    properties:
      type7_str_1:
        type: string
      type7_prop_1:
        type: object
  Type8:
    type: [Seed1,Type5]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1
      }
  Type9:
    type: [Type1]
    example: {}
  Type10:
    type: [Seed2]
    example: |
      {
        "str2": "str",
        "num2": 1,
        "type10_num_1": 1,
        "type10_bool_1": true
      }
    properties:
      type10_bool_1:
        type: boolean
      type10_num_1:
        type: number

/res1:
  post:
    body:
      application/json:
        type: object
        example: {}
/res2:
  post:
    body:
      application/json:
        type: [Type9,Seed1]
        example: |
          {
            "str1": "str",
            "num1": 1
          }
/res3:
  post:
    body:
      application/json:
        type: [Type7,Seed3]
        example: |
          {
            "str1": "str",
            "num1": 1,
            "str4": "str",
            "num4": 1,
            "type7_str_1": "str",
            "type7_prop_1": {},
            "str3": "str",
            "num3": 1
          }
/res4:
  post:
    body:
      application/json:
        type: [Type1]
        example: {}
/res5:
  post:
    body:
      application/json:
        type: object
        example: {}
