src/parser/test/parser-tests-gen/data/bad/bad-51.raml
#%RAML 1.0
title: Seed
version: v1
types:
  Seed1:
    properties:
      str1: string
      num1: number
  Seed2:
    properties:
      str2: string
      num2: number
  Seed3:
    properties:
      str3: string
      num3: number
  Seed41:
    type: Seed1
    properties:
      str4: string
      num4: number
  Type1:
    type: Seed1
    example: |
      {
        "str1": "str",
        "num1": 1,
        "type1_num_1": 1,
        "type1_prop_1": "str"
      }
    properties:
      type1_prop_1:
        type: (((Seed2)))
      type1_num_1:
        type: number
  Type2:
    type: Seed3
    example: |
      {
        "str3": "str",
        "num3": 1,
        "type2_bool_1": true,
        "type2_prop_1": {}
      }
    properties:
      type2_prop_1:
        type: object
      type2_bool_1:
        type: boolean
  Type3:
    type: object|Type1
    example: {}
  Type4:
    type: Type3|Type1
    example: {}
  Type5:
    type: Seed3|Type2
    example: |
      {
        "str3": "str",
        "num3": 1
      }
  Type6:
    type: object|object
    example: {}
  Type7:
    type: Seed3
    example: |
      {
        "str3": "str",
        "num3": 1,
        "type7_str_1": "str",
        "type7_prop_1": {}
      }
    properties:
      type7_prop_1:
        type: object
      type7_str_1:
        type: string
  Type8:
    type: Type4
    example: {}
  Type9:
    type: object|Type2
    example: {}
  Type10:
    type: object
    example: |
      {
        "type10_bool_2": true,
        "type10_bool_1": true
      }
    properties:
      type10_bool_1:
        type: boolean
      type10_bool_2:
        type: boolean

/res1:
  post:
    body:
      application/json:
        type: [Type7,Type4]
        example: |
          {
            "str3": "str",
            "num3": 1,
            "type7_prop_1": {},
            "type7_str_1": "str"
          }
/res2:
  post:
    body:
      application/json:
        type: Type3|Type5
        example: {}
/res3:
  post:
    body:
      application/json:
        type: Type7
        example: |
          {
            "str3": "str",
            "num3": 1,
            "type7_prop_1": {},
            "type7_str_1": "str"
          }
/res4:
  post:
    body:
      application/json:
        type: [Type2]
        example: |
          {
            "str3": "str",
            "num3": 1,
            "type2_prop_1": {},
            "type2_bool_1": true
          }
/res5:
  post:
    body:
      application/json:
        type: object|object
        example: {}
